@startuml state-diagram

hide empty description

[*] -r-> ManualDriving

state "Manual Driving" as ManualDriving
ManualDriving -r-> CruiseControl : cruise control button pressed

state "Advanced Cruise Control" as CruiseControl {
    [*] --> LaneKeeping
    state "Lane Keeping" as LaneKeeping {
        [*] -> NoInattentionDetected

        state "No Inattention Detected" as NoInattentionDetected
        NoInattentionDetected -> InattentionDetected : inattention detected for 2 seconds

        state "Inattention Detected" as InattentionDetected {
            InattentionDetected : after 8 seconds / activate wake up sound
        }
        InattentionDetected -> NoInattentionDetected : no inattention detected for 2 seconds
        InattentionDetected -r-> PullOverPrep : after 18 seconds

        state "Pull Over Preparation" as PullOverPrep {
            PullOverPrep : entry / activate turn signals
            PullOverPrep : do / gently shift to let the radar see further away
            PullOverPrep : do / slow down to computed maximum pull over speed
        }
        PullOverPrep --> PullingOver : pulling over is safe
    }

    state "Pulling Over" as PullingOver {
        [*] -> EmergencyLaneNotReached
        state "Emergency Lane Not Reached" as EmergencyLaneNotReached
        EmergencyLaneNotReached : do / slow down with computed deceleration
        EmergencyLaneNotReached : do / slow up to the min pull over speed
        EmergencyLaneNotReached : do / pull over to the emergency lane

        EmergencyLaneNotReached --> EmergencyLaneReached : emergency lane reached

        state "Emergency Lane Reached" as EmergencyLaneReached
        EmergencyLaneReached --> Stopped : [speed == 0]
        EmergencyLaneReached : do / slow down
    }

    state Stopped {
        Stopped : entry / activate emergency signals
    }
}
CruiseControl -l-> ManualDriving : manual driving button pressed
CruiseControl : exit / deactivate turn signals
CruiseControl : exit / deactivate wake up sound

@enduml
